--- a/Latex-Math/11.10.3/latexmath.tex
+++ b/Latex-Math/11.10.3/latexmath.tex
@@ -47,23 +47,23 @@ State whether the following statements are true false. Justify your answer
 \end {enumerate}
 \item Reduce the following equations into normal form. Find their perpendicular distances from the origin and angle between perpendicular and the positive $x$-axis.
 \begin {enumerate}
-\item $ x-\sqrt{3y}+8=0 $
+\item $ x-\sqrt{3}y+8=0 $
 \item $ y-2=0 $
 \item $ x-y=4 $
 \end {enumerate}
 \item Find the distance of the point (-1,1) from the line $ 12(X+6)= 5(Y-2)$.
-\item Find the points on the $x$-axis,whose distances from the line $\frac{x}{3}+\frac{y}{4}=1 $ are 4 units
+\item Find the points on the $x$-axis, whose distances from the line $\frac{x}{3}+\frac{y}{4}=1 $ are 4 units
 \item Find the distance between parallel lines 
 \begin {enumerate}
-\item $ 15x8y-34=0 \text{ and }15x+8y+31=0 $
+\item $ 15x+8y-34=0 \text{ and }15x+8y+31=0 $
 \item $ l (x+y)+p=0 \text{ and }(x+y)-r=0$.
 \end{enumerate}
 \item Find equation of the line parallel to the line $ 3x-4y+2=0 $ and passing through the point $(-2,3)$.
 \item Find equation of the line perpendicular to the line $x-7y+5=0$ and having $x$ intercept 3.
 \item find angles between the lines $\sqrt{3x}+y=1 \text{ and }x+\sqrt{3y}=1$.
 \item The line through the points $(h,3)\text{ and }(4,1)$ intersects the line $7x-9y-19=0$. at right angle. Find the value of $h$.
-\item Prove that the line through the point $(x_1,y_1)$ and parallrl to the line $ Ax+By+C=0 \text{ is } A(x-x_1)+B(y-y_1)=0$.
-\item Two lines passing though the point (2,3) intersects each other at anangle of 60$\degree$.If slope of one line is 2, find equation of the other line.
+\item Prove that the line through the point $(x_1,y_1)$ and parallel to the line $ Ax+By+C=0 \text{ is } A(x-x_1)+B(y-y_1)=0$.
+\item Two lines passing though the point (2,3) intersects each other at angle of 60$\degree$. If slope of one line is 2, find equation of the other line.
 \item Find the equation of the right bisector of the line segment joining the points $(3,4)\text{ and }(-1,2)$.
 \item Find the coordinates of the foot of perpendicular from the point (-1,3) to the line $3x-4y-16=0$.
 \item The perpendicular from the origin to the line $y=mx+c$ meets it at the point (-1,2). Find the values of $m$ and $c$.
