--- a/Latex-Math/11.10.3.1/pandu.tex
+++ b/Latex-Math/11.10.3.1/pandu.tex
@@ -12,6 +12,10 @@
 \usepackage[parfill]{parskip}
 \usepackage{hyperref}
 \usepackage{gensymb}
+\usepackage{commath}
+\usepackage{amssymb}
+\usepackage{amsthm}
+\usepackage{tikz}
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{multirow}
@@ -268,26 +272,31 @@ State whether the statements in Exercises 48 to 56 are true or false. Justify.
 Match the questions given under Column $C_1$ with their appropriate answers given under the Column $C_2$ is Exercises 57 to 59.
 \begin{enumerate}[resume]
 \item 
-\\
+\begin{center}
+\begin{tabular}{cccccc}
+\textbf{Column $C_1$} & & & & &  \textbf{Column $C_2$}\\
+\end{tabular}   
+\end{center}
 \begin{matchtabular}
-\centering
-\textbf{Column $C_1$} & \textbf{Column $C_2$}\\
   The coordinates of the points P and Q on the line x + 5y = 13 which are at a distance of 2 units from the line 12x – 5y + 26 = 0 are & (3,1),(-7,11)\\
   The coordinates of the point on the line x + y = 4, which are at a unit distance from the line 4x + 3y – 10 = 0 are & $-\frac{1}{11},\frac{11}{3}$ , $\frac{4}{3},\frac{7}{3}$\\
   The coordinates of the point on the line joining A (–2, 5) and B (3, 1) such that AP = PQ = QB are & 1,$\frac{12}{5}$ , $-3,\frac{16}{5}$\\
 \end{matchtabular}
+\\
 \item The value of the $\lambda$, if the lines\\$(2x+3y+4)+\lambda(6x-y+12)=0$ are
-
+\begin{center}
+\begin{tabular}{cccccc}
+\textbf{Column $C_1$} & & & & &  \textbf{Column $C_2$}\\
+\end{tabular}   
+\end{center}
 \begin{matchtabular}
-\centering
-\textbf{Column $C_1$} & \textbf{Column $C_2$}\\
 parallel to $y$-axis is & $\lambda =-\frac{3}{4}$\\
 perpendicular to $7x+y-4=0$ is & $\lambda=-\frac{1}{3}$\\
 passes through (1,2) is & $\lambda=-\frac{17}{41}$\\
 parallel to $x$ axis is & $\lambda=3$\\
 \end{matchtabular}
+\\
 \item The equation of the line through the intersection of the lines $2x-3y=0$ and $4x-5y=2$ and
-
 \begin{center}
 \begin{tabular}{cccccc}
 \textbf{Column $C_1$} & & & & &  \textbf{Column $C_2$}\\
@@ -302,3 +311,5 @@ equally inclined to the axes is & $3x-4y-1=0$\\
 \end{matchtabular}
 \end{enumerate}
 \end{document}
+Footer
+
