--- a/Latex-Math/10.10/10.10.tex
+++ b/Latex-Math/10.10/10.10.tex
@@ -63,13 +63,13 @@ breaklines=true
 \begin{document}
 \begin{center}
 \enlargethispage{-4cm}
-\title{\textbf{Conic Sections}}
+\title{\textbf{CONSTRUCTIONS}}
 \date{\vspace{-5ex}} %Not to print date automatically
 \maketitle
 \end{center}
 \setcounter{page}{1}
-\section*{11$^{th}$ Maths - Chapter 11}
 \begin{center}
+\section*{Chapter 10}
 \textbf{EXERCISE 10.1}
 \end{center}
 Choose the corret answer frow the given four options :
