--- a/Latex-Math/9.10.3/9.10.3.tex
+++ b/Latex-Math/9.10.3/9.10.3.tex
@@ -41,7 +41,7 @@ breaklines=true
 \section{EXERCISE - 10.3}
 \begin{enumerate}
 \item If arcs ${AXB}\text{ and }{CYD}$ of a circle are congruent, find the ratio of ${AB}\text{ and }{CD}$.
-\item If the perpendicular bisector of a chord ${AB}$ of a circle ${PXAQBY}$ intersects the circle at $\vec{P}\text{ and }\vec{Q}$, prove that arc ${PXA}\cong Arc {PYB}$.
+\item If the perpendicular bisector of a chord ${AB}$ of a circle ${PXAQBY}$ intersects the circle at $\vec{P}\text{ and }\vec{Q}$, prove that arc ${PXA}\cong Arc\brak{PYB}$.
 \item $\vec{A},\vec{B}\text{ and }\vec{C}$ are three points on a circle. Prove that the perpendicular bisectors of ${AB}$, ${BC}\text{ and }{CA}$ are concurrent.
 \item ${AB}\text{ and }{AC}$ are two equal chords of a circle. Prove that the bisector of the angle ${BAC}$ passes through the centre of the circle.
 \item If a line segment joining mid-points of two chords of a circle passes through the centre of the circle, prove that the two chords are parallel.
