--- a/Latex-Math/9.10.3/9.10.3.tex
+++ b/Latex-Math/9.10.3/9.10.3.tex
@@ -67,7 +67,7 @@ breaklines=true
 \label{fig:2}
 \end{figure}
 \item A quadrilateral ${ABCD}$ is inscrided in a circle such that $AB$ is a diameter and $\angle{ABC} = 130\degree$. Find $\angle{BAC}$.
-\item Two circles with centres $\vec{O}$\text{ and }$\vec{O}$' intersect at two points $\vec{A}\text{ and }\vec{B}$. A line $PQ$ is drawn parallel to $OO$' through $A(or B)$ intersecting the circles at $P$ and $Q$. Prove that $PQ$=2  $OO$' .
+\item Two circles with centres $\vec{O}$\text{ and }$\vec{O}\prime$ intersect at two points $\vec{A}\text{ and }\vec{B}$. A line $PQ$ is drawn parallel to $OO\prime$ through $A(or B)$ intersecting the circles at $P$ and $Q$. Prove that $PQ$=2  $OO$' .
 \item In Fig\ref{fig:3} $AOB$ is a diameter of the circle and $\vec{C},\vec{D},\vec{E}$ are any three points of the semi-circle. Find the value of $\angle ACD + \angle BED$.
 \begin{figure}[h!]
    \includegraphics[width=\columnwidth]{figs/image3.jpg}
